--- a/css/style.css
+++ b/css/style.css
@@ -1680,29 +1680,45 @@ p {
 
 @media (max-width: 1023px) {
   .filter__form {
-    display: none; } }
+    display: none; }
+    .filter__form--open {
+      position: absolute;
+      top: 27px;
+      left: 0;
+      z-index: 8;
+      display: flex;
+      flex-direction: column;
+      padding: 0;
+      padding-bottom: 40px;
+      width: 423px;
+      background-color: var(--white);
+      box-shadow: 0px 5px 32px var(--dark-light); } }
 
-.filter__form--open {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  padding: 40px;
-  background-color: var(--white);
-  box-shadow: 0px 5px 32px var(--dark-light); }
+@media (max-width: 767px) {
+  .filter__form {
+    left: 50%;
+    width: 270px;
+    transform: translateX(-50%); } }
 
 .filter fieldset {
-  padding: 28px 25px;
+  padding: 0;
   border: 1px solid var(--gold);
   border-radius: 0;
   cursor: pointer; }
   .filter fieldset:not(:first-child) {
     border-top: none; }
+  @media (max-width: 1023px) {
+    .filter fieldset {
+      border: none;
+      border-bottom: 1px solid var(--gold); } }
 
 .filter__title {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  padding: 28px 25px; }
+  @media (max-width: 1023px) {
+    .filter__title {
+      padding: 40px 40px 40px 21px; } }
 
 .filter__title h3 {
   font-weight: 500;
@@ -1710,7 +1726,7 @@ p {
   line-height: 130%; }
 
 .filter ul {
-  padding-top: 30px; }
+  padding: 0 25px 28px 25px; }
 
 .filter li:not(:last-child) {
   margin-bottom: 15px; }
@@ -1736,7 +1752,10 @@ p {
 .filter input:checked + label::before {
   background-color: var(--gold); }
 
-.filter button {
+.filter button[type="submit"],
+.filter button[type="reset"] {
+  margin-top: 25px;
+  width: 250px;
   height: 68px;
   font-weight: 500;
   font-size: 16px;
@@ -1744,28 +1763,83 @@ p {
   background-color: var(--gold);
   border: 1px solid var(--gold);
   cursor: pointer; }
+  @media (max-width: 1023px) {
+    .filter button[type="submit"],
+    .filter button[type="reset"] {
+      margin-left: 21px;
+      width: 362px; } }
+  @media (max-width: 767px) {
+    .filter button[type="submit"],
+    .filter button[type="reset"] {
+      width: 230px; } }
 
 .filter button[type="submit"] {
-  margin-top: 25px;
-  width: 250px;
   color: var(--white); }
 
 .filter button[type="reset"] {
-  margin-top: 25px;
-  width: 250px;
   background-color: var(--white);
   color: var(--dark); }
 
-.filter__toggle {
+.filter__open {
   display: none; }
   @media (max-width: 1023px) {
-    .filter__toggle {
+    .filter__open {
       display: flex;
       justify-content: center;
       align-items: center;
       margin-bottom: 50px;
       width: 100%;
-      color: var(--white); } }
+      height: 68px;
+      color: var(--white);
+      background-color: var(--gold);
+      border: 1px solid var(--gold);
+      cursor: pointer; } }
+
+.filter__close {
+  display: none; }
+  @media (max-width: 1023px) {
+    .filter__close {
+      position: absolute;
+      top: -15px;
+      right: -15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+      width: 32px;
+      height: 32px;
+      background-color: var(--black);
+      border: none;
+      border-radius: 50%;
+      cursor: pointer; } }
+
+.filter__close svg {
+  color: var(--white); }
+
+.filter--nojs .filter__form {
+  display: block;
+  margin-bottom: 50px; }
+  @media (max-width: 767px) {
+    .filter--nojs .filter__form {
+      margin-right: auto;
+      margin-left: auto;
+      transform: none; } }
+
+.filter--nojs .filter__open {
+  display: none; }
+
+.filter--nojs fieldset {
+  border: 1px solid var(--gold); }
+  .filter--nojs fieldset:not(:first-child) {
+    border-top: none; }
+
+.filter--nojs button[type="submit"],
+.filter--nojs button[type="reset"] {
+  margin-left: 0;
+  width: 100%; }
+
+.filter--nojs .filter__close {
+  display: none; }
 
 .control {
   margin-top: 30px; }
@@ -1830,13 +1904,11 @@ p {
 .form-accordion__block {
   display: none; }
 
-.form-accordion__item--active .form-accordion__button {
-  padding-bottom: 0; }
-
 .form-accordion__item--active .form-accordion__block,
 .form-accordion__item--nojs .form-accordion__block {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  padding: 0 25px 28px 25px; }
 
 .form-accordion__item--active .form-accordion__toggle {
   transform: rotate(180deg); }
@@ -1988,6 +2060,9 @@ p {
     .login__close {
       top: 9px;
       right: 6px; } }
+
+.login__close svg {
+  color: var(--dark); }
 
 @keyframes modal-open {
   0% {
