--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -121,9 +121,6 @@
 
   flex-shrink: 0;
 
-  padding-left: 15px;
-  padding-right: 15px;
-
   width: 100%;
   height: 100%;
 }
@@ -134,6 +131,14 @@
   align-items: center;
 
   width: 270px;
+
+  @media (max-width: $tablet) {
+    width: 324px;
+  }
+
+  @media (max-width: $mobile) {
+    width: 130px;
+  }
 }
 
 .slider__pagination {
